# etiss_riscv_examples

./: .gitignore  CMakeLists.txt  build.sh  etiss-build.sh  etiss.ld.in  rv32gcv-toolchain.cmake  verilator.ld.in
cmake/: etiss.cmake  verilator.cmake  verilator_bkp.cmake
libs/perfsim/: perfsim.h
target_code/: CMakeLists.txt
target_code/c/: CMakeLists.txt
target_code/cpp/: CMakeLists.txt
target_code/librvv/: CMakeLists.txt  gen_lib.py  rvv.h  test_config.py  vadd.c  vand.c  vdiv.c  vdivu.c  vmul.c  vmulh.c  vmulhu.c  vor.c  vrem.c  vremu.c  vrsub.c  vsub.c  vwadd.c  vwsub.c  vxor.c
target_code/ml_bench/: CMakeLists.txt  perfsim.h
target_code/ml_bench/FP32/toycar/: CMakeLists.txt  toycar_fp32.cpp
target_code/ml_bench/Int8/aww/: CMakeLists.txt  aww_int8.cpp
target_code/ml_bench/Int8/toycar/: CMakeLists.txt  toycar_int8.cpp
target_code/perfsim/: perfsim.h
target_code/scalar/: CMakeLists.txt  scalar_add.c
target_code/tflm/: CMakeLists.txt
target_code/tflm/toy/: CMakeLists.txt  main.cpp
target_code/vbench/: CMakeLists.txt
target_code/vbench/axpy/src/: axpy.c  main.c  utils.c
target_code/vbench/axpy_int/: CMakeLists.txt
target_code/vbench/axpy_int/src/: main.c  utils.c  utils.h
target_code/vbench/matmul/src/: matmul.c
target_code/vbench/test/: CMakeLists.txt  test.c
target_code/vector/: CMakeLists.txt  asm.h  basic.c  basic_asm.S  bench.c  bench_t.cpp  cpptest.cpp  perfsim.h  rvv_asm_bench.S  rvvbench.cpp  scalar_add.c  terminate.h  vector_add.c  vector_add_float.c
target_code/vector/instr_rvv/: bench.S  config.h  gen.S  gen.sh  main.c  rvv_bench_utils.h
target_code/vector/test/: minimal.S
toolchain_files/: gcc-toolchain.cmake  llvm-toolchain.cmake  rv32gc-llvm-toolchain.cmake  rv32gc-toolchain.cmake  rv32gcv-toolchain.cmake  rv32im.cmake  rv32im_zve32x.cmake  rv32imf.cmake  rv32imf_zfh.cmake  rv32imf_zfh_zve32f_zvfh.cmake  rv32imf_zve32f.cmake
verilator_bsp/: CMakeLists.txt  crt0.S  crt0_adapt.S  lld_link.ld
